test/expected/declare_ari.out
declare x as array of reference to int
        ^
9: error: array of reference is illegal; did you mean reference to array?
